Supposed to correct scrolling bug, but cause other problems on mobile

--- a/src/ionic/www/css/style.css
+++ b/src/ionic/www/css/style.css
@@ -1,6 +1,6 @@
 /* General */
 ion-content.has-header {
-    margin-bottom: 44px; /* Correct scrolling bug with ion-content that has 'has-header' applied */
+    /*margin-bottom: 44px;*/ /* Correct scrolling bug with ion-content that has 'has-header' applied */
 }
 
 .info-desc {
